Fix inventory sort & overflow scroll

--- a/assets/_sass/components/_tables.scss
+++ b/assets/_sass/components/_tables.scss
@@ -5,8 +5,8 @@
 }
 
 .table {
-  width: 100%;
-  max-width: 100%;
+  // width: 100%;
+  // max-width: 100%;
   @include font-size(14px);
   border-collapse: collapse;
   border-spacing: 0;
