--- a/assets/_sass/pages/page.scss
+++ b/assets/_sass/pages/page.scss
@@ -103,7 +103,7 @@
     blockquote {
       margin: 2rem 0 !important;
       padding: 1rem;
-      background: $color__gray-200;
+      background: $color__gray-300;
 
       /* stylelint-disable-next-line */
       p + p {
